tests/miniJava/neg/006211_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while class java { public static void Main ( String [ ] java ) { { } } } ( 0 ) { } } }
